chore: added insert statements in master tables