@@ -19,30 +19,7 @@ import static com.group15.tourassist.core.enums.Permission.*;
 public enum Role {
 
     CUSTOMER(Collections.emptySet()),
-    AGENT(Collections.emptySet()),
-
-    ADMIN(
-            Set.of(
-                    ADMIN_READ,
-                    ADMIN_UPDATE,
-                    ADMIN_DELETE,
-                    ADMIN_CREATE,
-                    MANAGER_READ,
-                    MANAGER_UPDATE,
-                    MANAGER_DELETE,
-                    MANAGER_CREATE
-            )
-    ),
-    MANAGER(
-            Set.of(
-                    MANAGER_READ,
-                    MANAGER_UPDATE,
-                    MANAGER_DELETE,
-                    MANAGER_CREATE
-            )
-    )
-
-    ;
+    AGENT(Collections.emptySet());
 
     @Getter
     private final Set<Permission> permissions;
